Fix overlapping title, and give modal more room on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,12 +55,6 @@ body {
   line-height: 1.6;
 }
 
-@media (max-width: 900px) {
-  body {
-    font-size: 12px;
-  }
-}
-
 .wrapper {
   width: 90%;
   margin: 0 5%;
@@ -131,13 +125,15 @@ nav a {
 
 .modal-content {
   background-color: #fefefe;
-  margin: 10% auto;
-  /* 15% from the top and centered */
+  margin: 5em auto;
   padding: 15px;
   border: 1px solid #888;
   width: 40%;
-  /* Could be more or less, depending on screen size */
   color: black;
+}
+
+.modal h2 {
+  margin-top: 0;
 }
 
 /* The Close Button */
@@ -280,6 +276,7 @@ nav a {
 .ui {
   position: fixed;
   opacity: 0.8;
+  z-index: 1;
 }
 
 .modalButtons {
@@ -303,7 +300,7 @@ nav a {
   display: block;
   text-indent: -1000em;
   background-color: transparent;
-  opacity: 0.5;
+  opacity: 0.6;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -509,4 +506,14 @@ button:hover {
 
 .clearfix {
   *zoom: 1;
+}
+
+@media (max-width: 900px) {
+  body {
+    font-size: 12px;
+  }
+
+  .modal-content {
+    width: 60%;
+  }
 }
